# alethos

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  llms-full.txt  requirements.txt  setup.cfg
alethos/: __init__.py  config.py  core.py
alethos/repl/: repl.py
examples/airline/: main.py
examples/airline/configs/: agents.py
examples/airline/evals/: eval_utils.py
examples/basic/: agent_handoff.py  bare_minimum.py  context_variables.py  function_calling.py  simple_loop_no_helpers.py
examples/customer_service_streaming/configs/: prompts.py
examples/personal_shopper/: main.py
examples/support_bot/: customer_service.py  main.py
examples/triage_agent/: agents.py  evals.py  run.py
examples/weather_agent/: agents.py  evals.py  run.py
tests/: mock_client.py  test_core.py  test_util.py
