[metadata]
name = alethos
version = 1.0.0
author = Alethieum
author_email = contact@alethieum.com
description = AlethOS is the operating system for digital AI — powering agents that think, feel, and act autonomously.
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
url = https://github.com/alethieum/alethos
project_urls = 
    Bug Reports = https://github.com/alethieum/alethos/issues
    Source = https://github.com/alethieum/alethos
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    openai>=1.33.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
    python-dotenv
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
